--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ qcustomplot/examples/scrollbar-axis-range-control/scrollbar-axis-range-control.p
 qcustomplot/examples/plots/plot-examples.pro.user
 qcustomplot/examples/interactions/interaction-example.pro.user
 qcustomplot/examples/axis-tags/axis-tags-example.pro.user
+LDMExplorer.pro.user
