Исправлена ошибка с серыми кнопками

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ qcustomplot/examples/plots/plot-examples.pro.user
 qcustomplot/examples/interactions/interaction-example.pro.user
 qcustomplot/examples/axis-tags/axis-tags-example.pro.user
 LDMExplorer.pro.user
+LDMExplorer.pro.user
