--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ qcustomplot/examples/interactions/interaction-example.pro.user
 qcustomplot/examples/axis-tags/axis-tags-example.pro.user
 LDMExplorer.pro.user
 LDMExplorer.pro.user
+*.user
